--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "install": "^0.13.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-instagram-embed": "^3.0.0",
+    "react-instagram-login": "^1.4.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-social-login-buttons": "^4.1.0",
     "react-spinners": "^0.13.8",
+    "reactjs-social-login": "^2.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
